@@ -1,3 +1,9 @@
+2007-01-13  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpfiledialog.c
+	* app/widgets/gimpthumbbox.[ch]: save some string copies by
+	changing gimp_thumb_box_set_uri() to gimp_thumb_box_take_uri().
+
 2007-01-12  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/compose.c
